# focustime

./: .gitignore  Cargo.toml  README.md
.butane/: connection.json
.butane/migrations/: state.json
.butane/migrations/20240715_123819965_activity/: sqlite_down.sql  sqlite_up.sql
.butane/migrations/20240715_125929653_event/: Activity.table  Event.table  info.json  sqlite_down.sql  sqlite_up.sql
.butane/migrations/current/: Activity.table  Event.table  types.json
src/: butane_migrations.rs  db.rs  i3.rs  main.rs  models.rs  types.rs
